fixed NotesFilter bug and hid notes overflow in NotesList

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,8 @@
 .container {
   margin-top: 10px;
 }
+
+.note-content {
+  overflow: hidden;
+  height: 70px;
+}
